improves dropdown options by allowing custom option function support

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -112,6 +112,10 @@
             &.active {
                 color: $mainsail-white;
                 background: $mainsail-blue-primary;
+
+                .mainsail-icon {
+                    color: $mainsail-white;
+                }
             }
         }
     }
