adds hover style to actions more button

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -54,6 +54,12 @@
             padding-right: 0;
             background: $mainsail-white;
             border: none;
+
+            &:hover {
+                .mainsail-icon svg {
+                    color: $mainsail-blue-dark;
+                }
+            }
         }
 
         .mainsail-row-actions__buttons {
