--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -115,3 +115,51 @@
         align-items: center;
     }
 }
+
+.mainsail-skeleton {
+    position: relative;
+    overflow: hidden;
+    flex-basis: 80%;
+    flex-shrink: 1;
+    min-height: 20px;
+    border-radius: $mainsail-skeleton-radius;
+    background: $mainsail-neutral-5;
+
+    &.animated::before {
+        content: "";
+        display: block;
+        position: absolute;
+        left: -150px;
+        top: 0;
+        height: 100%;
+        width: 150px;
+        background: linear-gradient(
+                to right,
+                transparent 0%,
+                rgba($mainsail-neutral-6, 0.9) 50%,
+                transparent 100%
+            ),
+            $mainsail-neutral-5;
+        left: -100px;
+        animation: load 3s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+    }
+
+    &.sm {
+        flex-basis: 30%;
+    }
+    &.md {
+        flex-basis: 60%;
+    }
+    &.lg {
+        flex-basis: 90%;
+    }
+}
+
+@keyframes load {
+    from {
+        left: -150px;
+    }
+    to {
+        left: 100%;
+    }
+}
