fixes some story implementations

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -43,6 +43,7 @@
         align-items: center;
         justify-content: flex-end;
         margin-left: auto;
+        flex: 1;
 
         .mainsail-row-actions__default {
             display: flex;
