initial TimePicker component

--- a/src/components/core/index.scss
+++ b/src/components/core/index.scss
@@ -6,6 +6,7 @@
 @import "../../styles/Text.scss";
 
 // SASS Global Import for plopjs
+@import "../TimePicker/TimePicker.scss";
 @import "../PopMenu/PopMenu.scss";
 @import "../Table/Table.scss";
 @import "../Dropdown/Dropdown.scss";
