adds responsive spacing utilities

--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -56,6 +56,157 @@
     @include spacing-modifiers($attribute: "padding-left");
 }
 
+@include md-size-down() {
+    .sm\:m {
+        @include spacing-modifiers($attribute: "margin");
+    }
+    .sm\:mx {
+        @include spacing-modifiers($attribute: "margin-left");
+        @include spacing-modifiers($attribute: "margin-right");
+    }
+    .sm\:my {
+        @include spacing-modifiers($attribute: "margin-top");
+        @include spacing-modifiers($attribute: "margin-bottom");
+    }
+    .sm\:mt {
+        @include spacing-modifiers($attribute: "margin-top");
+    }
+    .sm\:mr {
+        @include spacing-modifiers($attribute: "margin-right");
+    }
+    .sm\:mb {
+        @include spacing-modifiers($attribute: "margin-bottom");
+    }
+    .sm\:ml {
+        @include spacing-modifiers($attribute: "margin-left");
+    }
+
+    .sm\:p {
+        @include spacing-modifiers($attribute: "padding");
+    }
+    .sm\:px {
+        @include spacing-modifiers($attribute: "padding-left");
+        @include spacing-modifiers($attribute: "padding-right");
+    }
+    .sm\:py {
+        @include spacing-modifiers($attribute: "padding-top");
+        @include spacing-modifiers($attribute: "padding-bottom");
+    }
+    .sm\:pt {
+        @include spacing-modifiers($attribute: "padding-top");
+    }
+    .sm\:pr {
+        @include spacing-modifiers($attribute: "padding-right");
+    }
+    .sm\:pb {
+        @include spacing-modifiers($attribute: "padding-bottom");
+    }
+    .sm\:pl {
+        @include spacing-modifiers($attribute: "padding-left");
+    }
+}
+
+@include md-size-up() {
+    .md\:m {
+        @include spacing-modifiers($attribute: "margin");
+    }
+    .md\:mx {
+        @include spacing-modifiers($attribute: "margin-left");
+        @include spacing-modifiers($attribute: "margin-right");
+    }
+    .md\:my {
+        @include spacing-modifiers($attribute: "margin-top");
+        @include spacing-modifiers($attribute: "margin-bottom");
+    }
+    .md\:mt {
+        @include spacing-modifiers($attribute: "margin-top");
+    }
+    .md\:mr {
+        @include spacing-modifiers($attribute: "margin-right");
+    }
+    .md\:mb {
+        @include spacing-modifiers($attribute: "margin-bottom");
+    }
+    .md\:ml {
+        @include spacing-modifiers($attribute: "margin-left");
+    }
+
+    .md\:p {
+        @include spacing-modifiers($attribute: "padding");
+    }
+    .md\:px {
+        @include spacing-modifiers($attribute: "padding-left");
+        @include spacing-modifiers($attribute: "padding-right");
+    }
+    .md\:py {
+        @include spacing-modifiers($attribute: "padding-top");
+        @include spacing-modifiers($attribute: "padding-bottom");
+    }
+    .md\:pt {
+        @include spacing-modifiers($attribute: "padding-top");
+    }
+    .md\:pr {
+        @include spacing-modifiers($attribute: "padding-right");
+    }
+    .md\:pb {
+        @include spacing-modifiers($attribute: "padding-bottom");
+    }
+    .md\:pl {
+        @include spacing-modifiers($attribute: "padding-left");
+    }
+}
+
+@include lg-size-up() {
+    .lg\:m {
+        @include spacing-modifiers($attribute: "margin");
+    }
+    .lg\:mx {
+        @include spacing-modifiers($attribute: "margin-left");
+        @include spacing-modifiers($attribute: "margin-right");
+    }
+    .lg\:my {
+        @include spacing-modifiers($attribute: "margin-top");
+        @include spacing-modifiers($attribute: "margin-bottom");
+    }
+    .lg\:mt {
+        @include spacing-modifiers($attribute: "margin-top");
+    }
+    .lg\:mr {
+        @include spacing-modifiers($attribute: "margin-right");
+    }
+    .lg\:mb {
+        @include spacing-modifiers($attribute: "margin-bottom");
+    }
+    .lg\:ml {
+        @include spacing-modifiers($attribute: "margin-left");
+    }
+
+    .lg\:p {
+        @include spacing-modifiers($attribute: "padding");
+    }
+    .lg\:px {
+        @include spacing-modifiers($attribute: "padding-left");
+        @include spacing-modifiers($attribute: "padding-right");
+    }
+    .lg\:py {
+        @include spacing-modifiers($attribute: "padding-top");
+        @include spacing-modifiers($attribute: "padding-bottom");
+    }
+    .lg\:pt {
+        @include spacing-modifiers($attribute: "padding-top");
+    }
+    .lg\:pr {
+        @include spacing-modifiers($attribute: "padding-right");
+    }
+    .lg\:pb {
+        @include spacing-modifiers($attribute: "padding-bottom");
+    }
+    .lg\:pl {
+        @include spacing-modifiers($attribute: "padding-left");
+    }
+}
+
+/* Basic widths */
 .max-w-1400 {
     max-width: 1400px;
 }
