--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -37,5 +37,9 @@ input[type="number"] {
         @include disabled;
 
         @include readonly;
+
+        &.with-icon {
+            padding-left: 32px;
+        }
     }
 }
