--- a/src/components/FormControl/FormControl.scss
+++ b/src/components/FormControl/FormControl.scss
@@ -6,6 +6,7 @@
 .mainsail-form-control {
     min-width: auto;
     box-sizing: border-box;
+    position: relative;
 
     input {
         @include mainsail-body-text-regular;
@@ -58,5 +59,44 @@
         &.disabled {
             opacity: 0.5;
         }
+    }
+
+    /** Fallback input styling */
+    input:not(.mainsail-input) {
+        @include mainsail-body-text-regular;
+
+        padding: 7px;
+        color: $mainsail-neutral-2;
+        height: 36px;
+        border-radius: $mainsail-input-border-radius;
+        border: 1px solid $mainsail-input-border;
+        background-color: $mainsail-white;
+        box-sizing: border-box;
+
+        &::placeholder {
+            color: $mainsail-neutral-2;
+        }
+
+        &:active,
+        &:focus {
+            outline: none;
+            border-color: $mainsail-blue-primary;
+            border: 1px solid $mainsail-blue-primary;
+            box-shadow: $mainsail-shadow-near;
+        }
+
+        @include disabled;
+
+        @include readonly;
+
+        &.with-icon {
+            padding-left: 32px;
+        }
+    }
+
+    .input-icon {
+        position: absolute;
+        left: 8px;
+        top: 30px;
     }
 }
