removes width props from form inputs/controls
- width will be driven by layout components

--- a/src/styles/Utility.scss
+++ b/src/styles/Utility.scss
@@ -10,38 +10,38 @@
 /* Grid-template Generation */
 @mixin grid-templates() {
     @for $_ from 1 through 12 {
-        &.sm-grid-cols-#{$_} {
+        &.sm\:grid-cols-#{$_} {
             grid-template-columns: repeat($_, minmax(0, 1fr));
         }
 
-        &.sm-grid-rows-#{$_} {
+        &.sm\:grid-rows-#{$_} {
             grid-template-rows: repeat($_, minmax(0, 1fr));
         }
 
-        .sm-col-span-#{$_} {
+        .sm\:col-span-#{$_} {
             grid-column: span $_;
         }
 
-        .sm-row-span-#{$_} {
+        .sm\:row-span-#{$_} {
             grid-row: span $_;
         }
     }
 
     @include md-size-up() {
         @for $_ from 1 through 12 {
-            &.md-grid-cols-#{$_} {
+            &.md\:grid-cols-#{$_} {
                 grid-template-columns: repeat($_, minmax(0, 1fr));
             }
 
-            &.md-grid-rows-#{$_} {
+            &.md\:grid-rows-#{$_} {
                 grid-template-rows: repeat($_, minmax(0, 1fr));
             }
 
-            .md-col-span-#{$_} {
+            .md\:col-span-#{$_} {
                 grid-column: span $_;
             }
 
-            .md-row-span-#{$_} {
+            .md\:row-span-#{$_} {
                 grid-row: span $_;
             }
         }
@@ -49,22 +49,30 @@
 
     @include lg-size-up() {
         @for $_ from 1 through 12 {
-            &.lg-grid-cols-#{$_} {
+            &.lg\:grid-cols-#{$_} {
                 grid-template-columns: repeat($_, minmax(0, 1fr));
             }
 
-            &.lg-grid-rows-#{$_} {
+            &.lg\:grid-rows-#{$_} {
                 grid-template-rows: repeat($_, minmax(0, 1fr));
             }
 
-            .lg-col-span-#{$_} {
+            .lg\:col-span-#{$_} {
                 grid-column: span $_;
             }
 
-            .lg-row-span-#{$_} {
+            .lg\:row-span-#{$_} {
                 grid-row: span $_;
             }
         }
+    }
+
+    .col-span-auto {
+        grid-column: auto;
+    }
+
+    .col-span-auto {
+        grid-column: auto;
     }
 
     &.grid-cols-auto {
