--- a/src/components/NativeDatePicker/NativeDatePicker.scss
+++ b/src/components/NativeDatePicker/NativeDatePicker.scss
@@ -1,26 +1,22 @@
 @import "../../styles/Variables.scss";
-@import "../../styles/Layout.scss";
 
-/** Input Component Styles */
-input[type="text"],
-input[type="tel"],
-input[type="email"],
-input[type="phone"],
-input[type="number"],
-input[type="url"],
-input[type="email"],
-input[type="password"],
-input[type="number"] {
-    &.mainsail-input {
+/** DatePicker Component Styles */
+.mainsail-native-datepicker {
+    position: relative;
+
+    input[type="date"] {
+        appearance: none !important;
+        -webkit-appearance: none !important;
         @include mainsail-body-text-regular;
-
-        padding: 7px;
         color: $mainsail-neutral-2;
         height: 36px;
         border-radius: $mainsail-input-border-radius;
         border: 1px solid $mainsail-input-border;
         background-color: $mainsail-white;
         box-sizing: border-box;
+        padding: 7px;
+        padding-left: 30px;
+        text-transform: uppercase;
 
         &::placeholder {
             color: $mainsail-neutral-2;
@@ -37,9 +33,20 @@ input[type="number"] {
         @include disabled;
 
         @include readonly;
+    }
 
-        &.with-icon {
-            padding-left: 32px;
-        }
+    input[type="date"]::-webkit-clear-button {
+        display: initial;
+    }
+
+    input[type="date"]::-webkit-calendar-picker-indicator {
+        color: $mainsail-neutral-2;
+        display: none;
+    }
+
+    .mainsail-icon {
+        position: absolute;
+        left: 8px;
+        top: 10px;
     }
 }
